# roboticaDeManipuladores

./: LICENSE.txt
Archivos Diseños 3D/Archivos Blender/: Base.blend1  Eslabon1.blend  Eslabon1.blend1  Eslabon2.blend  (+14 more)
Control/: funcionesAlgoritmoGenetico.py  objetoGenetico.py
Modelado Matematico/: Cinematica.py  Dinamica.py  Trayectorias.py
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/: CMakeLists.txt  package.xml
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/: RMRC.h  claseRobots.cpp  claseRobots.h  gTrayArt.cpp  gTrayArt.h  jacobianoGeometricoTEST.cpp  main.cpp  moduloCinematica.cpp  moduloCinematica.h  mostrarTrayectoria.cpp  movCicloidal.cpp  movCircular  movCircular.cpp  movHelicoidal.cpp  movLineaRectaOrientacion.cpp  movLineaRectaOrientacion_TEST.cpp  movLineal  movLineal.cpp  state_publisher_plantilla.cpp  trayCircularTEST.cpp  trayectoriaLineaRecta.cpp
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/Test/: cinematicaInversa_TEST.cpp  eulerToRotation_TEST.cpp  jacobianoGeometricoTEST.cpp  trayectoriaCartesiana.cpp  trayectoriaLineaRecta.cpp
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/config/: config.yaml
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/launch/: displaygui.launch  launchRobot6DOF.launch  paramLoad.launch
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/robot_description/: Robot6GDL.gv
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/robot_description/meshes/: Base.stl  Eslabon1.stl  Eslabon3.dae  Wrist5.dae  Wrist6.dae
Simulacion/Paquete ROS/catkin_ws/src/robot6gdl/src/robot_description/urdf/: model.urdf
(+28 files in other folders)
